--- a/style.scss
+++ b/style.scss
@@ -33,8 +33,7 @@ body {
 .dark {
     width: 100%;
     position: absolute;
-    height: 100vh;
-    background: #2f2f2f7a;  
+    height: 115vh;
 }
 
 .home_page_modal {
@@ -482,4 +481,116 @@ nav a:hover {
 
 .hovered {
     cursor: pointer;
+}
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1050;
+	display: none;
+    background: rgba(47, 47, 47, 0.4784313725);
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+.modal__content {
+	position: relative;
+	width: 1000px;
+    height: 600px;
+	padding: 40px;
+    background: #1D2125;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	max-height: 80vh;
+	overflow-y: auto;
+    margin-top: 140px;
+    margin-left: 335px;
+}
+.modal__close {
+	position: absolute;
+	top: 8px;
+	right: 14px;
+	font-size: 30px;
+	color: #fff;
+	opacity: 0.5;
+	font-weight: 700;
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+.modal__title {
+	text-align: center;
+	font-size: 22px;
+	text-transform: uppercase;
+    color: #fff;
+    margin-left: 10px;
+    width: fit-content;
+}
+.modal__input {
+	display: block;
+	margin: 20px auto 20px auto;
+    width: 890px;
+	height: 50px;
+	background-color: rgba(0, 0, 0, 0.61);
+	border: none;
+	font-size: 18px;
+	text-align: center;
+	padding: 0 20px;
+	outline: 0;
+    border-radius: 10px;
+    color: #fff;
+}
+.modal__des{
+    height: 80px;
+}
+.create_btn{
+    width: 150px;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.61);
+    margin-left: 370px;
+    margin-right: 20px;
+}
+.close{
+    width: 120px;
+    color: white;
+    font-size: 16px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.61);
+}
+.modal .btn {
+	display: block;
+	width: 280px;
+	margin: 0 auto;
+}
+.show {
+	display: block;
+}
+.hide {
+	display: none;
+}
+.over{
+    overflow: hidden;
+}
+.fade {
+	animation-name: fade;
+	animation-duration: 1.5s;
+}
+@keyframes fade {
+	from {
+		opacity: 0.1;
+	}
+	to {
+		opacity: 1;
+	}
+}
+input::placeholder{
+    color: #fff;
 }
