--- a/style.scss
+++ b/style.scss
@@ -34,6 +34,7 @@ body {
     width: 100%;
     position: absolute;
     height: 115vh;
+    display: flex;
 }
 
 .home_page_modal {
@@ -591,6 +592,290 @@ nav a:hover {
 		opacity: 1;
 	}
 }
-input::placeholder{
+
+.container{
+    margin-top: 50px;
+    display: flex;
+}
+.fill {
+    color: #8C9BAB;
+    margin-bottom: 5px;
+    height: 100px;
+    width: 95%;
+    cursor: pointer;
+    background: #373d42;
+    padding: 10px;
+    border-radius: 12px;
+}
+.fill span {
+    color: red;
+}
+
+.div_emp {
+    padding: 10px;
+    --list-background: var(--tr-background-list, #ebecf0);
+    --list-text: var(--ds-text, #172b4d);
+    --list-text-subtle: var(--ds-text-subtle, #44546f);
+    --list-text-subtlest: var(--ds-text-subtlest, #626f86);
+    background-color: var(--list-background);
+    border-radius: 12px;
+    box-shadow: var(--ds-shadow-raised, 0px 1px 1px #091e4240, 0px 0px 1px #091e424f);
+    color: var(--list-text-subtle);
+    display: flex;
+    justify-content: space-between;
+    max-height: 100%;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 272px;
+    align-self: start;
+    padding-bottom: 8px;
+    position: relative;
+    white-space: normal;
+    width: 272px;
+    box-sizing: border-box;
+    vertical-align: top;
+    scroll-margin: 8px;
+    background-color: #1D2125;
+    margin-top: 15px;
+    margin-left: 15px;
+}
+.plus{
+    padding: 0;
+    background-color: transparent;
+    border-radius: 8px;
+    color: var(--list-text-subtle);
+    padding: 6px 12px 6px 8px;
+    text-decoration: none;
+    -webkit-user-select: none;
+    user-select: none;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-grow: 1;
+    margin: 0;
+    color: white;
+}
+svg{
+    width: 16px;
+    height: 16px;
+}
+.add{
+    background-color: #1D2125;
+    border: none;
+    border-radius: 10px;
+    display: flex;
+    padding: 5px 70px 0 0;
+}
+.txt::placeholder{
+    width: 170px;
+    font-size: 15px;
+    color: #8C9BAB;
+}
+.add_cl{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+}
+.add_card{
+    display: flex;
+    padding: 0px 11.59px 0px 11.79px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: none;
+    color: #1D2125;
+    font-size: 13.344px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    border-radius: 3px;
+    background: #579DFF;
+}
+.add_div{
+    width: 100%;
+}
+.close{
+    background: none;
+    margin-top: 7px;
+    margin-left: 10px;
+    padding: 0;
+    width: 20px;
+    height: 20px;
+}
+.clos{
+    padding: 0;
+    width: 20px;
+    height: 20px;
     color: #fff;
+    transform: rotate(45deg);
+}
+.txt{
+    // display: none;
+    font-size: 15px;
+    color: #8C9BAB;
+    background-color: #373d42;
+    box-shadow: var(--ds-shadow-raised, 0px 1px 1px #091e4240, 0px 0px 1px #091e424f);
+    border-radius: 8px;
+    border: none;
+    height: 110px !important;
+    height: auto;
+    margin: 0;
+    max-height: 162px;
+    min-height: 54px;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    overflow-y: auto;
+    padding: 8px 12px;
+    resize: none;
+    width: 100%;
+}
+.add:hover{
+    background-color: rgba(94, 94, 94, 0.247);
+}
+.add_h1{
+    font-size: 14px;
+    color: white;
+}
+.empty{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    min-height: 10px;
+    height: 100%;
+    width: 100%;
+    background-color: #1D2125;
+}
+.title-span {
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    margin-bottom: 10px;
+    margin: 0;
+    padding: 6px 8px 6px 12px;
+    background-color: transparent;
+    overflow: hidden;
+    overflow-wrap: anywhere;
+    white-space: normal;
+    cursor: pointer;
+    color: white;
+}
+
+.hold {
+    cursor: pointer;
+    border: solid #ccc 4px;
+}
+
+.hovered1 {
+    background: gray;
+    border-style: dashed;
+}
+
+.invisible {
+    display: none;
+}
+
+.hovered:hover {
+    background-color: #414141;
+}
+
+.hovered {
+    cursor: pointer;
+}
+.lower_header_box{
+    display: flex;
+    align-items: baseline;
+}
+.lower_header{
+    height: 55.67px;
+    position: absolute;
+    left: 236px;
+    transition: 0.2s ease;
+    backdrop-filter: blur(4px);
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(100% - 236px);
+    background: rgba(0, 0, 0, 0.158);
+}
+#dot_logo{
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    font-size: 30px;
+}
+.invert{
+    filter: invert(100%);
+}
+.byDesk{
+    display: flex;
+    gap: 20px;
+    background: rgb(255, 255, 255);
+    padding: 15px 20px;
+    border-radius: 10px;
+    text-decoration: none;
+
+}
+.byDesk p{
+    text-decoration: none;
+    color: #1D2125;
+}
+.lower_header_l{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.lower_header_r a{
+    text-decoration: none;
+    color: white;
+}
+.lower_header_r{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.flex{
+    display: flex;
+    gap: 20px;
+}
+.pfp{
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+}
+.pfp:nth-child(2){
+    transform: translateX(-30%);
+}
+.pfp:nth-child(3){
+    transform: translateX(-60%);
+}
+.pfp:nth-child(4){
+    transform: translateX(-90%);
+}
+.pfp:nth-child(5){
+    transform: translateX(-120%);
+}
+.PFPs{
+    display: flex;
+    align-items: center;
+    gap: -10px;
+    border-left:1px solid #929292;
+    padding: 10px;
+}
+.PFPs span{
+    transform: translateX(-150%);
+
+}
+.share{
+    background: white;
+    padding: 10px 13px;
+    display: flex;
+    border-radius: 5px;
+    gap: 10px;
+}
+.white{
+    color: rgb(0, 0, 0);
 }
