--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,11 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+main {
+    width: 100%;
+    display: flex;
+}
+
 header {
     padding: 10px;
     border-bottom: 0.8px solid rgba(159, 173, 188, 0.16);
@@ -28,13 +33,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-}
-
-.dark {
-    width: 100%;
-    position: absolute;
-    height: 100vh;
-    background: #2f2f2f7a;  
+    
 }
 
 .home_page_modal {
@@ -72,7 +71,6 @@ nav {
         font-style: normal;
         font-weight: 500;
         line-height: 32px;
-        /* 228.571% */
     }
 }
 
@@ -112,7 +110,6 @@ nav {
     background: #22272B;
 
     input {
-        outline: none;
         background: none;
         border: none;
         color: white;
@@ -191,10 +188,12 @@ nav {
 
 aside {
     width: 236px;
-    background: #1D2125;
     height: 100%;
-    position: relative;
-    height: calc(100vh - 56px);
+    position: absolute;
+    top: 55px;
+    left: 0px;
+    bottom: 0px;
+    background-color: #1D2125 !important;
 }
 
 .header {
@@ -252,9 +251,6 @@ aside {
     }
 }
 
-.body {
-    padding-top: 12px;
-}
 
 .hide_aside {
     display: flex;
@@ -351,19 +347,6 @@ aside {
     letter-spacing: -0.042px;
 }
 
-.modes {
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 16px;
-    padding: 8px 12px;
-    margin-top: 16px;
-    line-height: 24px;
-    margin: 0;
-    flex: 1;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
 
 .second_part {
     padding-top: 8px;
@@ -420,6 +403,10 @@ aside {
 
 body {
     position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 0;
 }
 
 .show_aside {
@@ -485,20 +472,343 @@ nav a:hover {
 .hovered {
     cursor: pointer;
 }
+
+.modal {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1050;
+	display: none;
+    background: rgba(47, 47, 47, 0.4784313725);
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: rgba(0, 0, 0, 0.5);
+}
+.modal__content {
+	position: relative;
+	width: fit-content;
+    height: 600px;
+	padding: 40px;
+    background: #1D2125;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	max-height: 80vh;
+	overflow-y: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    scale: 0.75;
+}
+.modal__close {
+	position: absolute;
+	top: 8px;
+	right: 14px;
+	font-size: 30px;
+	color: #fff;
+	opacity: 0.5;
+	font-weight: 700;
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+.modal__title {
+	text-align: center;
+	font-size: 22px;
+	text-transform: uppercase;
+    color: #fff;
+    margin-left: 10px;
+    width: fit-content;
+}
+.modal__input {
+	display: block;
+	margin: 20px auto 20px auto;
+    width: 890px;
+	height: 50px;
+	background-color: rgba(0, 0, 0, 0.61);
+	border: none;
+	font-size: 18px;
+	text-align: center;
+	padding: 0 20px;
+	outline: 0;
+    border-radius: 10px;
+    color: #fff;
+}
+.modal__des{
+    height: 80px;
+}
+.create_btn{
+    width: 150px;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.61);
+    margin-left: 370px;
+    margin-right: 20px;
+}
+.close{
+    width: 120px;
+    color: white;
+    font-size: 16px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.61);
+}
+.modal .btn {
+	display: block;
+	width: 280px;
+	margin: 0 auto;
+}
+.show {
+	display: block;
+}
+.hide {
+	display: none;
+}
+.over{
+    overflow: hidden;
+}
+.fade {
+	animation-name: fade;
+	animation-duration: .3s;
+}
+@keyframes fade {
+	from {
+		opacity: 0.1;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+.container{
+    margin-top: 50px;
+    margin-left: 250px;
+    display: flex;
+    align-items: start;
+    gap: 20px;
+    padding: 20px;
+    transition: 0.3s ease;
+
+    .div_emp {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        // justify-content: space-between;
+        gap: 20px;
+        padding: 10px ;
+        background-color: #1D2125;
+        border-radius: 12px;
+        width: 300px;
+        min-height: 400px;
+        height: 100%;
+        position: relative;
+        filter: brightness(100%);
+        .empty {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            height: 100% !important;
+            gap: 20px;
+            margin-bottom: 70px;
+        }
+        button {
+            all: unset;
+            position: absolute;
+            bottom: 10px;
+            width: 90%;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            background-color: #1D2125;
+        }
+    }
+}
+.fill {
+    color: #8C9BAB;
+    margin-bottom: 5px;
+    height: 100px;
+    width: 95%;
+    cursor: pointer;
+    background: #373d42;
+    padding: 10px;
+    border-radius: 12px;
+    position: relative;
+    overflow: hidden;
+    transition: 1s ease;
+}
+.fill:hover{
+    filter:sepia(40%);
+}
+.fill:hover .anim_line_top{
+    transform: translateX(100%);
+    transition: 1s ease;
+}
+.fill:hover .anim_line_bottom{
+    transform: translateX(-100%);
+    transition: 1s ease;
+}
+.fill span {
+    color: red;
+}
+.anim_line_top{
+    transition: 1s ease;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg,transparent,rgb(68, 149, 255));
+}
+.anim_line_bottom{
+    transition: 1s ease;
+    position: absolute;
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(270deg,transparent,rgb(68, 149, 255));
+}
+svg{
+    width: 16px;
+    height: 16px;
+}
+
+.txt::placeholder{
+    width: 170px;
+    font-size: 15px;
+    color: #8C9BAB;
+}
+.add_cl{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+}
+.add_card{
+    display: flex;
+    padding: 0px 11.59px 0px 11.79px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border: none;
+    color: #1D2125;
+    font-size: 13.344px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px;
+    border-radius: 3px;
+    background: #579DFF;
+}
+.add_div{
+    width: 100%;
+}
+.close{
+    background: none;
+    margin-top: 7px;
+    margin-left: 10px;
+    padding: 0;
+    width: 20px;
+    height: 20px;
+}
+.clos{
+    padding: 0;
+    width: 20px;
+    height: 20px;
+    color: #fff;
+    transform: rotate(45deg);
+}
+.txt{
+    // display: none;
+    font-size: 15px;
+    color: #8C9BAB;
+    background-color: #373d42;
+    box-shadow: var(--ds-shadow-raised, 0px 1px 1px #091e4240, 0px 0px 1px #091e424f);
+    border-radius: 8px;
+    border: none;
+    height: 110px !important;
+    height: auto;
+    margin: 0;
+    max-height: 162px;
+    min-height: 54px;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    overflow-y: auto;
+    padding: 8px 12px;
+    resize: none;
+    width: 100%;
+}
+.add:hover{
+    background-color: rgba(94, 94, 94, 0.247);
+}
+.add_h1{
+    font-size: 14px;
+    color: white;
+}
+.empty{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    min-height: 10px;
+    height: 100%;
+    width: 100%;
+    background-color: #1D2125;
+}
+.title-span {
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    margin-bottom: 10px;
+    margin: 0;
+    padding: 6px 8px 6px 12px;
+    background-color: transparent;
+    overflow: hidden;
+    overflow-wrap: anywhere;
+    white-space: normal;
+    cursor: pointer;
+    color: white;
+}
+
+.hold {
+    cursor: pointer;
+    border: solid #ccc 4px;
+}
+
+.hovered1 {
+    background: gray;
+    border-style: dashed;
+}
+
+.invisible {
+    display: none;
+}
+
+.hovered:hover {
+    background-color: #414141;
+}
+
+.hovered {
+    cursor: pointer;
+}
 .lower_header_box{
     display: flex;
     align-items: baseline;
 }
 .lower_header{
+    height: 55.67px;
     position: absolute;
-    left: 236px;
     transition: 0.2s ease;
     backdrop-filter: blur(4px);
     padding: 20px 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: calc(100% - 236px);
+    width: 100%;
     background: rgba(0, 0, 0, 0.158);
 }
 #dot_logo{
@@ -564,6 +874,9 @@ nav a:hover {
     gap: -10px;
     border-left:1px solid #929292;
     padding: 10px;
+    background: none;
+    cursor: pointer;
+    border: none;
 }
 .PFPs span{
     transform: translateX(-150%);
@@ -579,73 +892,130 @@ nav a:hover {
 .white{
     color: rgb(0, 0, 0);
 }
-.absol{
+
+.members_modal {
     position: absolute;
-    display: flex;
-    top: 91px;
+    top: 0;
     left: 0;
-    color: white;
-    gap: 20px;
-    padding: 20px;
-    align-items: flex-start;
+    background-color: #00000068;
+    width: 100%;
+    height: 100%;
 }
-.task_box{
-    background: #000;
+
+.modal_content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    width: 700px;
+    height: 450px;
     border-radius: 10px;
-    padding: 10px 15px;
-    width: 300px;
+    overflow-y: auto;
+    background-color: #1D2125;
+    padding: 30px;
+
+    form {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        h3 {
+            color: white;
+            padding-bottom: 5px;
+        }
+
+
+        input {
+            width: 100%;
+            padding: 15px;
+            border-radius: 15px;
+            background-color: #3e3e3e58;
+            color: white;
+            border: 1px solid #ffffff;
+            outline: none;
+        }
+        select {
+            width: 100%;
+            padding: 15px;
+            border-radius: 15px;
+            background-color: #3e3e3e58;
+            color: white;
+            border: 1px solid #ffffff;
+            outline: none;
+        }
+
+        .buttons {
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+
+            button {
+                background: none;
+                cursor: pointer;
+
+                img {
+                    height: 40px;
+                    width: 40px;
+                }
+            }
+            
+        }
+    }
 }
-.task_box_top{
+.ADD {
+    margin: 0 auto;
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
+    padding: 15px 20px;
+    border-radius: 15px;
+    background-color: #3e3e3e;
+    color: white;
+    border: 1px solid rgb(246, 246, 246);
+    cursor: pointer;
 }
-.jj{
-    
+.error {
+    border: 2px solid #ff0000;
+    color: red($color: #000000);
+}
+
+.ava {
+    padding: 10px;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid transparent;
+}
+
+.selected {
+    border: 2px solid #ffffff;
+}
+.corner{
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
     width: 30px;
     height: 30px;
     border-radius: 100%;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
 }
-.task_box_items{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    transition: 1s ease;
-    
-}
-.fill{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background: rgb(44, 44, 44);
-    border-radius: 10px;
+.trash{
+    background: #255ad552;
     padding: 10px;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    filter: invert(100%);
+    transform: translateX(100%);
+    transition: 1s ease;
 }
-.marginbot{
-    margin-bottom: 30px;
-}
-.task_box_bottom img{
-    width: 25px;
-}
-.task_box_bottom{
-    display: flex;
-    align-items: center;
-    padding:10px;
-    
-}
-.hold {
-    cursor: pointer;
-    border: solid #ccc 4px;
-}
-
-.hovered_item {
-    background: gray;
-    border-style: dashed;
-}
-
-.invisible {
-    display: none;
+.trash_head{
+    transition: 1s ease;
+    height: 20px;
+    width: 100%;
+    background: rgb(80, 80, 80);
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 10px;
 }
