--- a/style.scss
+++ b/style.scss
@@ -860,3 +860,9 @@ svg{
 .white{
     color: rgb(0, 0, 0);
 }
+.bin{
+    margin-left: 1500px;
+    margin-top: 220px;
+    width: 100px;
+    height: 100px;
+}
