--- a/style.scss
+++ b/style.scss
@@ -386,9 +386,10 @@ aside {
         font-size: 13.453px;
         font-style: normal;
         font-weight: 400;
-        line-height: 20px; /* 148.664% */
+        line-height: 20px;
+        /* 148.664% */
     }
-    
+
     .desk {
         background-image: url(https://incrussia.ru/wp-content/uploads/2019/11/iStock-1003143450.jpg);
         width: 24px;
@@ -431,7 +432,7 @@ body {
 
 
 .hide {
-    display: none;  
+    display: none;
 }
 
 nav a {
@@ -474,71 +475,77 @@ nav a:hover {
 }
 
 .modal {
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: 1050;
-	display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
     background: rgba(47, 47, 47, 0.4784313725);
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.5);
 }
+
 .modal__content {
-	position: relative;
-	width: fit-content;
+    position: relative;
+    width: fit-content;
     height: 600px;
-	padding: 40px;
+    padding: 40px;
     background: #1D2125;
     border: 1px solid rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-	max-height: 80vh;
-	overflow-y: auto;
+    border-radius: 4px;
+    max-height: 80vh;
+    overflow-y: auto;
     position: absolute;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
     scale: 0.75;
 }
+
 .modal__close {
-	position: absolute;
-	top: 8px;
-	right: 14px;
-	font-size: 30px;
-	color: #fff;
-	opacity: 0.5;
-	font-weight: 700;
-	border: none;
-	background-color: transparent;
-	cursor: pointer;
+    position: absolute;
+    top: 8px;
+    right: 14px;
+    font-size: 30px;
+    color: #fff;
+    opacity: 0.5;
+    font-weight: 700;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
 }
+
 .modal__title {
-	text-align: center;
-	font-size: 22px;
-	text-transform: uppercase;
+    text-align: center;
+    font-size: 22px;
+    text-transform: uppercase;
     color: #fff;
     margin-left: 10px;
     width: fit-content;
 }
+
 .modal__input {
-	display: block;
-	margin: 20px auto 20px auto;
+    display: block;
+    margin: 20px auto 20px auto;
     width: 890px;
-	height: 50px;
-	background-color: rgba(0, 0, 0, 0.61);
-	border: none;
-	font-size: 18px;
-	text-align: center;
-	padding: 0 20px;
-	outline: 0;
+    height: 50px;
+    background-color: rgba(0, 0, 0, 0.61);
+    border: none;
+    font-size: 18px;
+    text-align: center;
+    padding: 0 20px;
+    outline: 0;
     border-radius: 10px;
     color: #fff;
 }
-.modal__des{
+
+.modal__des {
     height: 80px;
 }
-.create_btn{
+
+.create_btn {
     width: 150px;
     height: 40px;
     border-radius: 5px;
@@ -549,7 +556,8 @@ nav a:hover {
     margin-left: 370px;
     margin-right: 20px;
 }
-.close{
+
+.close {
     width: 120px;
     color: white;
     font-size: 16px;
@@ -558,34 +566,41 @@ nav a:hover {
     border: none;
     background-color: rgba(0, 0, 0, 0.61);
 }
+
 .modal .btn {
-	display: block;
-	width: 280px;
-	margin: 0 auto;
-}
-.show {
-	display: block;
-}
-.hide {
-	display: none;
-}
-.over{
-    overflow: hidden;
-}
-.fade {
-	animation-name: fade;
-	animation-duration: .3s;
-}
-@keyframes fade {
-	from {
-		opacity: 0.1;
-	}
-	to {
-		opacity: 1;
-	}
+    display: block;
+    width: 280px;
+    margin: 0 auto;
 }
 
-.container{
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.over {
+    overflow: hidden;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: .3s;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.1;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.container {
     margin-top: 50px;
     margin-left: 250px;
     display: flex;
@@ -600,7 +615,7 @@ nav a:hover {
         align-items: start;
         // justify-content: space-between;
         gap: 20px;
-        padding: 10px ;
+        padding: 10px;
         background-color: #1D2125;
         border-radius: 12px;
         width: 300px;
@@ -616,6 +631,7 @@ nav a:hover {
             gap: 20px;
             margin-bottom: 70px;
         }
+
         button {
             all: unset;
             position: absolute;
@@ -628,6 +644,7 @@ nav a:hover {
         }
     }
 }
+
 .fill {
     color: #8C9BAB;
     margin-bottom: 5px;
@@ -652,6 +669,18 @@ nav a:hover {
     transform: translateX(-100%);
     transition: 1s ease;
 }
+.fill:hover{
+    filter:sepia(40%);
+}
+.fill:hover .anim_line_top{
+    transform: translateX(100%);
+    transition: 1s ease;
+}
+.fill:hover .anim_line_bottom{
+    transform: translateX(-100%);
+    transition: 1s ease;
+}
+
 .fill span {
     color: red;
 }
@@ -678,17 +707,19 @@ svg{
     height: 16px;
 }
 
-.txt::placeholder{
+.txt::placeholder {
     width: 170px;
     font-size: 15px;
     color: #8C9BAB;
 }
-.add_cl{
+
+.add_cl {
     margin-top: 5px;
     margin-bottom: 5px;
     display: flex;
 }
-.add_card{
+
+.add_card {
     display: flex;
     padding: 0px 11.59px 0px 11.79px;
     flex-direction: column;
@@ -704,10 +735,12 @@ svg{
     border-radius: 3px;
     background: #579DFF;
 }
-.add_div{
+
+.add_div {
     width: 100%;
 }
-.close{
+
+.close {
     background: none;
     margin-top: 7px;
     margin-left: 10px;
@@ -715,14 +748,16 @@ svg{
     width: 20px;
     height: 20px;
 }
-.clos{
+
+.clos {
     padding: 0;
     width: 20px;
     height: 20px;
     color: #fff;
     transform: rotate(45deg);
 }
-.txt{
+
+.txt {
     // display: none;
     font-size: 15px;
     color: #8C9BAB;
@@ -742,14 +777,17 @@ svg{
     resize: none;
     width: 100%;
 }
-.add:hover{
+
+.add:hover {
     background-color: rgba(94, 94, 94, 0.247);
 }
-.add_h1{
+
+.add_h1 {
     font-size: 14px;
     color: white;
 }
-.empty{
+
+.empty {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -758,6 +796,7 @@ svg{
     width: 100%;
     background-color: #1D2125;
 }
+
 .title-span {
     display: block;
     font-size: 14px;
@@ -795,11 +834,13 @@ svg{
 .hovered {
     cursor: pointer;
 }
-.lower_header_box{
+
+.lower_header_box {
     display: flex;
     align-items: baseline;
 }
-.lower_header{
+
+.lower_header {
     height: 55.67px;
     position: absolute;
     transition: 0.2s ease;
@@ -811,16 +852,19 @@ svg{
     width: 100%;
     background: rgba(0, 0, 0, 0.158);
 }
-#dot_logo{
+
+#dot_logo {
     text-decoration: none;
     color: white;
     font-weight: 700;
     font-size: 30px;
 }
-.invert{
+
+.invert {
     filter: invert(100%);
 }
-.byDesk{
+
+.byDesk {
     display: flex;
     gap: 20px;
     background: rgb(255, 255, 255);
@@ -829,67 +873,81 @@ svg{
     text-decoration: none;
 
 }
-.byDesk p{
+
+.byDesk p {
     text-decoration: none;
     color: #1D2125;
 }
-.lower_header_l{
+
+.lower_header_l {
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.lower_header_r a{
+
+.lower_header_r a {
     text-decoration: none;
     color: white;
 }
-.lower_header_r{
+
+.lower_header_r {
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.flex{
+
+.flex {
     display: flex;
     gap: 20px;
 }
-.pfp{
+
+.pfp {
     width: 30px;
     height: 30px;
     border-radius: 100%;
 }
-.pfp:nth-child(2){
+
+.pfp:nth-child(2) {
     transform: translateX(-30%);
 }
-.pfp:nth-child(3){
+
+.pfp:nth-child(3) {
     transform: translateX(-60%);
 }
-.pfp:nth-child(4){
+
+.pfp:nth-child(4) {
     transform: translateX(-90%);
 }
-.pfp:nth-child(5){
+
+.pfp:nth-child(5) {
     transform: translateX(-120%);
 }
-.PFPs{
+
+.PFPs {
     display: flex;
     align-items: center;
     gap: -10px;
-    border-left:1px solid #929292;
+    border-left: 1px solid #929292;
     padding: 10px;
     background: none;
     cursor: pointer;
     border: none;
 }
-.PFPs span{
+
+.PFPs span {
     transform: translateX(-150%);
 
 }
-.share{
+
+.share {
     background: white;
     padding: 10px 13px;
     display: flex;
     border-radius: 5px;
     gap: 10px;
 }
-.white{
+
+.white {
     color: rgb(0, 0, 0);
 }
 
@@ -934,6 +992,7 @@ svg{
             border: 1px solid #ffffff;
             outline: none;
         }
+
         select {
             width: 100%;
             padding: 15px;
@@ -958,10 +1017,11 @@ svg{
                     width: 40px;
                 }
             }
-            
+
         }
     }
 }
+
 .ADD {
     margin: 0 auto;
     display: flex;
@@ -972,6 +1032,7 @@ svg{
     border: 1px solid rgb(246, 246, 246);
     cursor: pointer;
 }
+
 .error {
     border: 2px solid #ff0000;
     color: red($color: #000000);
