--- a/style.scss
+++ b/style.scss
@@ -1080,3 +1080,17 @@ svg{
     padding: 10px;
     border-radius: 10px;
 }
+.neag{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: #2c2c2c;
+    z-index: 1 !important;
+    opacity: 0.5;
+}
+.finded{
+    position: relative;
+    z-index: 1000 !important;
+    opacity: 1;
+}
